fix: fix OSM tiles not showing up due to CORP/COEP headers on album pages using a rewrite proxy

--- a/src/components/search/Search.module.css
+++ b/src/components/search/Search.module.css
@@ -1,10 +1,12 @@
 .resultPicture {
   width: 150px;
   height: 150px;
+  margin-bottom: var(--m);
   background-color: var(--c-bg-contrast-dark);
   object-fit: cover;
   object-position: center;
-  display: block;
+  display: grid;
+  place-content: center;
 }
 
 .moreButton {
@@ -66,7 +68,7 @@
 }
 
 .searchWidget input {
-  width: 250px;
+  width: 300px;
   padding: var(--m-m);
   color: var(--c-contrast);
   background-color: var(--c-bg);
